// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge demo -- badge 1`] = `
.c32 {
  position: relative;
  display: inline-block;
}

.c33 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c30 {
  margin-right: 8px;
  font-size: 14px;
}

.c28 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c28 .c29 {
  color: #4074e1;
}

.c31 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c26 .c27,
.c26 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c26 .c27:last-child,
.c26 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c26 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c26 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c26 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c6 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 input:hover {
  border-color: #4683e6;
}

.c6 input:focus {
  border-color: #4683e6;
}

.c6 .style__IconWrap-hppXiF {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c12 {
  position: relative;
}

.c14 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
}

.c9 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
}

.c11 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c7 .c13 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7 .c13::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 .c13::-moz-placeholder {
  color: #abb4c3;
}

.c7 .c13:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 .c13::placeholder {
  color: #abb4c3;
}

.c7 .c8,
.c7 .c10 {
  border-color: #c3cad9;
}

.c7:hover {
  border-color: #4683e6;
}

.c7 .c13 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c7 .c8,
.c7 .c10 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c7 .c8:hover,
.c7 .c10:hover {
  color: #4074e1;
}

.c7 .c8 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c7 .c10 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c17 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c19 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c25 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c15:hover {
  border-color: #4683e6;
}

.c15 .c22 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c15 .c24 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c15 .c16 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c15 .c18,
.c15 .c20 {
  line-height: 16px;
}

.c15 .c18 {
  padding-right: 20px;
}

.c15 .c20 {
  padding-left: 20px;
}

.c15 .c18 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        value
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <span
          class="c6"
        >
          <input
            value="1"
          />
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        maxValue
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c7"
        >
          <div>
            <span
              class="c8 c9"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c10 c11"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c12"
          >
            <input
              autocomplete="off"
              class="c13 c14"
              min="-9007199254740991"
              step="1"
              value="99"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        dot
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c15"
        >
          <div
            class="c16 c17"
          >
            <span
              class="c18 c19"
            >
              ON
            </span>
            <span
              class="c20 c21"
            >
              OFF
            </span>
            <span
              class="c22 c23"
            >
              <span
                class="c24 c25"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        hideWhenZero
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c15"
        >
          <div
            class="c16 c17"
          >
            <span
              class="c18 c19"
            >
              ON
            </span>
            <span
              class="c20 c21"
            >
              OFF
            </span>
            <span
              class="c22 c23"
            >
              <span
                class="c24 c25"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        noneContent
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c15"
        >
          <div
            class="c16 c17"
          >
            <span
              class="c18 c19"
            >
              ON
            </span>
            <span
              class="c20 c21"
            >
              OFF
            </span>
            <span
              class="c22 c23"
            >
              <span
                class="c24 c25"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        placement
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c26"
        >
          <div
            checked=""
            class="c27 c28"
          >
            <i
              class="icon__cbox-ed c29 c30 "
            />
            topRight
          </div>
          <div
            class="c27 c31"
          >
            <i
              class="icon__circle c29 c30 "
            />
            topLeft
          </div>
          <div
            class="c27 c31"
          >
            <i
              class="icon__circle c29 c30 "
            />
            bottomRight
          </div>
          <div
            class="c27 c31"
          >
            <i
              class="icon__circle c29 c30 "
            />
            bottomLeft
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        badgeStyle.color
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        badgeStyle.background
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c32"
      style="margin:10px;"
    >
      <div
        style="width:50px;height:50px;background:#ddd;"
      />
      <div
        style="position:absolute;"
      >
        <span
          class="c33"
        >
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customStyle 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
        style="background:white;color:black;border:1px solid #ddd;"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c2"
        style="background:blue;"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        string
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        <span
          style="font-weight:bolder;"
        >
          node
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- dot 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- hideWhenZero 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        0
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
  </div>
</div>
`;

exports[`Badge demo -- maxValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        10
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        9+
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- noneContent 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <span
      class="c1"
    >
      99+
    </span>
  </div>
</div>
`;

exports[`Badge demo -- placement 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
</div>
`;
